--- a/infrastructure/guestbook/guestbook-ui-deployment.yaml
+++ b/infrastructure/guestbook/guestbook-ui-deployment.yaml
@@ -14,7 +14,9 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
+      - image: asia-east1-docker.pkg.dev/homepage-436511/docker-repo/ks-guestbook-demo:latest
         name: guestbook-ui
         ports:
         - containerPort: 80
+      imagePullSecrets:
+        - name: gcp-artifact-registry
