--- a/.github/workflows/script-edit-action.yml
+++ b/.github/workflows/script-edit-action.yml
@@ -2,9 +2,7 @@ name: Docker Build
 
 on:
   push:
-    # Only trigger on changes in main branch
     branches: [ "main" ]
-    # Only trigger when files in this path change
     paths:
       - 'go/project/data_collector/**'
 
@@ -25,11 +23,19 @@ jobs:
             TAG=$(git rev-parse --short=8 HEAD)  # Get first 8 characters of SHA
           fi
           echo "VERSION=$TAG" >> $GITHUB_ENV
-          echo "VERSION_TAG=$TAG" >> $GITHUB_ENV
           echo "Computed VERSION: $TAG"
+
+      - name: Authenticate with Google Artifact Registry
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Configure Docker to use Google Artifact Registry
+        run: |
+          gcloud auth configure-docker asia-east1-docker.pkg.dev
 
       - name: Build and Push Multi-Platform Image
         uses: docker/build-push-action@v4
@@ -38,7 +44,6 @@ jobs:
           file: Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
-          # Use computed VERSION in the tag
           tags: asia-east1-docker.pkg.dev/homepage-436511/docker-repo/data_collector:${{ env.VERSION }}
           build-args: |
             VERSION=${{ env.VERSION }}
