--- a/.github/workflows/build-data_collector-action.yml
+++ b/.github/workflows/build-data_collector-action.yml
@@ -1,4 +1,4 @@
-name: Docker Build
+name: Build
 
 on:
   push:
@@ -40,8 +40,8 @@ jobs:
       - name: Build and Push Multi-Platform Image
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: Dockerfile
+          context: go
+          file: project/data_collector/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: asia-east1-docker.pkg.dev/homepage-436511/docker-repo/data_collector:${{ env.VERSION }}
