--- a/.github/workflows/build-data_collector-action.yml
+++ b/.github/workflows/build-data_collector-action.yml
@@ -44,6 +44,8 @@ jobs:
           file: go/project/data_collector/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: asia-east1-docker.pkg.dev/homepage-436511/docker-repo/data_collector:${{ env.VERSION }}
+          tags: |
+            asia-east1-docker.pkg.dev/homepage-436511/docker-repo/data_collector:${{ env.VERSION }}
+            asia-east1-docker.pkg.dev/homepage-436511/docker-repo/data_collector:latest
           build-args: |
             VERSION=${{ env.VERSION }}
