--- a/.github/workflows/build-data-collector-action.yml
+++ b/.github/workflows/build-data-collector-action.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - 'go/project/data-collector/**'
+      - '../../go/project/datacollector/**'
 
 jobs:
   build-and-push:
@@ -41,11 +41,11 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: go
-          file: go/project/data-collector/Dockerfile
+          file: go/project/datacollector/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            asia-east1-docker.pkg.dev/homepage-436511/docker-repo/data-collector:${{ env.VERSION }}
-            asia-east1-docker.pkg.dev/homepage-436511/docker-repo/data-collector:latest
+            asia-east1-docker.pkg.dev/homepage-436511/docker-repo/datacollector:${{ env.VERSION }}
+            asia-east1-docker.pkg.dev/homepage-436511/docker-repo/datacollector:latest
           build-args: |
             VERSION=${{ env.VERSION }}
