--- a/infrastructure/default/data_collector-svc.yaml
+++ b/infrastructure/default/data_collector-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: data-collector
+  name: datacollector
 spec:
   ports:
   - port: 3000
     targetPort: 3000
   selector:
-    app: data-collector
+    app: datacollector
