--- a/go/project/datacollector/Dockerfile
+++ b/go/project/datacollector/Dockerfile
@@ -5,37 +5,22 @@
 ##
 FROM golang:1.23.2-alpine3.20 AS builder
 
-# Define a required build argument
-ARG VERSION
 
-# Fail the build if VERSION is not set
+ARG VERSION
 RUN test -n "$VERSION" || (echo "ERROR: VERSION is not set!" && exit 1)
 
-# Set the working directory inside the container
+
 WORKDIR /app
 
-# Copy go.mod and go.sum first to leverage caching
-#COPY go.mod go.sum ./
-
-
-# Copy the rest of the source code
 COPY . .
 RUN ls -R /app
 RUN go work sync
-# Build the application (embed VERSION via ldflags)
-RUN CGO_ENABLED=0 GOOS=linux go build \
+
+RUN go build \
     -ldflags="-X main.Version=$VERSION" \
     -o myapp ./project/datacollector
 
-##
-# Stage 2: Final minimal image
-##
 FROM alpine:3.20
-
 WORKDIR /app
-
-# Copy the compiled binary from the builder stage
 COPY --from=builder /app/myapp .
-
-# Set an entrypoint (or CMD)
 ENTRYPOINT ["/app/myapp"]
