--- a/script/port-forward@.service
+++ b/script/port-forward@.service
@@ -8,8 +8,8 @@ StartLimitBurst=5
 [Service]
 Type=simple
 ExecStart=/bin/bash -c "\
-  echo 'Instance Name: %I' && \
-  IFS='/' read -r NAMESPACE SVCNAME HOSTPORT CONTAINERPORT <<< '%I' && \
+  echo 'Instance Name: %i' && \
+  IFS=':' read -r NAMESPACE SVCNAME HOSTPORT CONTAINERPORT <<< '%i' && \
   echo \"Starting port-forward: namespace=$NAMESPACE, svc=$SVCNAME, hostPort=$HOSTPORT, containerPort=$CONTAINERPORT\" && \
   exec /usr/local/bin/minikube kubectl -- port-forward --address 0.0.0.0 \"svc/$SVCNAME\" -n \"$NAMESPACE\" \"$HOSTPORT:$CONTAINERPORT\" \
 "
