finish embedding_service

--- a/go/conf/config.yaml
+++ b/go/conf/config.yaml
@@ -2,3 +2,6 @@ qdrant:
   host: "34.81.62.96"
   port: 6334
   api_key: "4tu892hl#%$^&pjo:gne;w*&("
+embedding_service:
+  host: "localhost"
+  port: 50051
