--- a/infrastructure/default/embeddingservice-svc.yaml
+++ b/infrastructure/default/embeddingservice-svc.yaml
@@ -5,8 +5,10 @@ metadata:
 spec:
   ports:
   - port: 8080
+    name: http
     targetPort: 5000
   - port: 50051
+    name: grpc
     targetPort: 50051
   selector:
     app: embeddingservice
