--- a/.github/workflows/build-datacollector-action.yml
+++ b/.github/workflows/build-datacollector-action.yml
@@ -43,7 +43,8 @@ jobs:
           context: go
           file: go/project/datacollector/Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64
+#          ,linux/arm64
+          platforms: linux/amd64
           tags: |
             asia-east1-docker.pkg.dev/homepage-436511/docker-repo/datacollector:${{ env.VERSION }}
             asia-east1-docker.pkg.dev/homepage-436511/docker-repo/datacollector:latest
