--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /.idea
 /python/embedding_service/.venv/
 /python/telegram_reader/.venv/
+/project/python/embedding_service/.venv/
+/project/python/telegram_reader/.venv/
