--- a/flyway.conf
+++ b/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://localhost:5432/postgres
+flyway.url=jdbc:postgresql://localhost:5432/discovery_system
 flyway.user=postgres
 flyway.password=postgres
 flyway.locations=filesystem:postgres_migrations
