--- a/project/reactjs/keycloak-spa/package.json
+++ b/project/reactjs/keycloak-spa/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-keycloak/core": "^3.2.0",
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,6 +13,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
+    "keycloak-js": "^26.1.4",
     "oidc-client-ts": "^3.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
