--- a/project/python/telegram_reader/config.yml
+++ b/project/python/telegram_reader/config.yml
@@ -10,3 +10,9 @@ http:
   host: "0.0.0.0"
   port:  8002
   log_level: "debug"
+
+keycloak:
+  url: "http://localhost:8082"
+  realm: "discovery_system"
+  client_id: "demo"
+  audience: "account"
