--- a/project/python/telegram_reader/config.yml
+++ b/project/python/telegram_reader/config.yml
@@ -1,10 +1,10 @@
 redis:
-  host: "localhost"
+  host: "redis"
   port: 6379
   db: 0
 
 postgres:
-  url: "postgresql://postgres:postgres@localhost:5432/discovery_system"
+  url: "postgresql://postgres:postgres@postgres.default:5432/discovery_system"
 
 http:
   host: "0.0.0.0"
@@ -12,7 +12,7 @@ http:
   log_level: "debug"
 
 keycloak:
-  url: "http://localhost:8082"
+  url: "http://keycloak:8080"
   realm: "discovery_system"
   client_id: "demo"
   audience: "account"
