--- a/project/python/telegram_reader/config.yml
+++ b/project/python/telegram_reader/config.yml
@@ -16,3 +16,5 @@ keycloak:
   realm: "discovery_system"
   client_id: "demo"
   audience: "account"
+
+log_file_path: "/Users/jacky_li/logs/telegram_reader.log"
