--- a/project/python/telegram_reader/requirements.txt
+++ b/project/python/telegram_reader/requirements.txt
@@ -27,6 +27,7 @@ importlib_metadata==8.6.1
 iniconfig==2.1.0
 instructor==0.6.8
 jiter==0.9.0
+kafka-python==2.1.5
 markdown-it-py==3.0.0
 mdurl==0.1.2
 multidict==6.3.1
