--- a/project/python/telegram_reader/requirements.txt
+++ b/project/python/telegram_reader/requirements.txt
@@ -3,22 +3,32 @@ aiohttp==3.11.16
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+appnope==0.1.4
 asgiref==3.8.1
+asttokens==3.0.0
 asyncpg==0.30.0
 attrs==25.3.0
+backcall==0.2.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.2
+decorator==5.2.1
+defusedxml==0.7.1
 Deprecated==1.2.18
 distro==1.9.0
+docopt==0.6.2
 docstring-parser==0.15
-fastapi==0.115.12
+executing==2.2.0
+fastjsonschema==2.21.1
 frozenlist==1.5.0
 googleapis-common-protos==1.70.0
 greenlet==3.1.1
 grpcio==1.71.0
+grpcio-tools==1.71.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -26,13 +36,27 @@ idna==3.10
 importlib_metadata==8.6.1
 iniconfig==2.1.0
 instructor==0.6.8
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.6
 jiter==0.9.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
 kafka-python==2.1.5
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mistune==3.1.3
 multidict==6.3.1
 mypy==1.15.0
 mypy-extensions==1.0.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
 openai==1.70.0
 opentelemetry-api==1.32.0
 opentelemetry-exporter-otlp-proto-common==1.32.0
@@ -45,10 +69,19 @@ opentelemetry-sdk==1.32.0
 opentelemetry-semantic-conventions==0.53b0
 opentelemetry-util-http==0.53b0
 packaging==24.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pipreqs==0.5.0
+platformdirs==4.3.7
 pluggy==1.5.0
+prompt_toolkit==3.0.51
 propcache==0.3.1
 protobuf==5.29.4
 psycopg2==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyaes==1.6.1
 pyasn1==0.6.1
 pycparser==2.22
@@ -56,24 +89,38 @@ pydantic==2.11.1
 pydantic_core==2.33.0
 Pygments==2.19.1
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 PyYAML==6.0.2
+pyzmq==26.4.0
 redis==5.2.1
+referencing==0.36.2
 requests==2.32.3
 rich==13.9.4
+rpds-py==0.24.0
 rsa==4.9
+setuptools==78.1.0
 shell_gpt==1.4.4
+six==1.17.0
 sniffio==1.3.1
+soupsieve==2.6
 SQLAlchemy==2.0.40
+stack-data==0.6.3
 starlette==0.46.1
 Telethon==1.39.0
 tenacity==8.5.0
+tinycss2==1.4.0
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 typer==0.9.4
 typing-inspection==0.4.0
 typing_extensions==4.13.0
 urllib3==2.3.0
 uvicorn==0.34.0
+wcwidth==0.2.13
+webencodings==0.5.1
 wrapt==1.17.2
+yarg==0.1.9
 yarl==1.18.3
 zipp==3.21.0
