--- a/project/python/telegram_reader/requirements.txt
+++ b/project/python/telegram_reader/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 appnope==0.1.4
 asgiref==3.8.1
+astroid==3.3.9
 asttokens==3.0.0
 asyncpg==0.30.0
 attrs==25.3.0
@@ -19,6 +20,7 @@ cryptography==44.0.2
 decorator==5.2.1
 defusedxml==0.7.1
 Deprecated==1.2.18
+dill==0.4.0
 distro==1.9.0
 docopt==0.6.2
 docstring-parser==0.15
@@ -37,6 +39,7 @@ importlib_metadata==8.6.1
 iniconfig==2.1.0
 instructor==0.6.8
 ipython==8.12.3
+isort==6.0.1
 jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.9.0
@@ -49,6 +52,7 @@ kafka-python==2.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
+mccabe==0.7.0
 mdurl==0.1.2
 mistune==3.1.3
 multidict==6.3.1
@@ -58,15 +62,16 @@ nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 openai==1.70.0
-opentelemetry-api==1.32.0
+opentelemetry-api==1.32.1
 opentelemetry-exporter-otlp-proto-common==1.32.0
 opentelemetry-exporter-otlp-proto-grpc==1.32.0
-opentelemetry-instrumentation==0.53b0
+opentelemetry-instrumentation==0.53b1
 opentelemetry-instrumentation-asgi==0.53b0
 opentelemetry-instrumentation-fastapi==0.53b0
+opentelemetry-instrumentation-grpc==0.53b1
 opentelemetry-proto==1.32.0
 opentelemetry-sdk==1.32.0
-opentelemetry-semantic-conventions==0.53b0
+opentelemetry-semantic-conventions==0.53b1
 opentelemetry-util-http==0.53b0
 packaging==24.2
 pandocfilters==1.5.1
@@ -89,6 +94,7 @@ pydantic==2.11.1
 pydantic_core==2.33.0
 Pygments==2.19.1
 PyJWT==2.10.1
+pylint==3.3.6
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 PyYAML==6.0.2
@@ -110,6 +116,7 @@ starlette==0.46.1
 Telethon==1.39.0
 tenacity==8.5.0
 tinycss2==1.4.0
+tomlkit==0.13.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
