--- a/project/go/conf/config.yaml
+++ b/project/go/conf/config.yaml
@@ -5,3 +5,18 @@ qdrant:
 embedding_service:
   host: "localhost"
   port: 50051
+
+postgres:
+  host: "postgres-headless.default"
+  port: 5432
+  user: "postgres"
+  password: "postgres"
+  db: "discovery_system"
+  sslmode: "disable"
+  timezone: "Asia/Taipei"
+
+redis:
+    host: "redis"
+    port: 6379
+    password: ""
+    db: 0
