--- a/infra/k8s/keycloak.yml
+++ b/infra/k8s/keycloak.yml
@@ -26,7 +26,7 @@ spec:
         - name: KC_DB
           value: "postgres"
         - name: KC_DB_URL
-          value: "jdbc:postgresql://postgres:5432/discovery_system"
+          value: "jdbc:postgresql://postgres-headless:5432/discovery_system"
         - name: KC_DB_USERNAME
           value: "postgres"
         - name: KC_DB_PASSWORD
